Added Partners name

--- a/Assignment 2 - COMP1073/assignment2.html
+++ b/Assignment 2 - COMP1073/assignment2.html
@@ -1,5 +1,5 @@
 <!-- Below, please list all group members' full names and student IDs. -->
-<!-- Jonathan Diaz 200545008, 		-->
+<!-- Jonathan Diaz 200545008, Alfred Xavier Cheruvally Thankachan 200561910	-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
